# MyCloud

./: .env.example  .gitignore  README.md  docker-compose.yml
.githooks/: pre-push
backend/: CMakeLists.txt  Dockerfile  README.md  go.mod  go.sum
backend-go/: Dockerfile  README.md  go.mod  go.sum  sqlc.yaml
backend-go/migrations/: 002_performance_indexes.sql  003_share_grants.sql  004_share_limits.sql  005_comments.sql  006_upload_requests.sql  007_file_versions.sql  008_file_dedup.sql  010_file_text.sql  (+5 more)
backend/cmd/server/: main.go
backend/internal/auth/: jwt.go  middleware.go
backend/internal/config/: config.go
backend/internal/db/: db.go
backend/internal/handlers/: admin.go  auth.go  files.go  folders.go  helpers.go  search.go  setup.go  shares.go  trash.go  updates.go
backend/internal/redisclient/: client.go
backend/internal/services/: auth.go  encryption.go  share.go  storage.go
backend/internal/utils/: hash.go  response.go  uuid.go
backend/migrations/: 001_initial.sql
backend/src/: main.cpp
backend/src/controllers/: AdminController.h  AuthController.h  FileController.h  FolderController.h  SearchController.h  SetupController.h  ShareController.h  TrashController.h  UpdateController.h
backend/src/middleware/: AdminMiddleware.h  AuthMiddleware.h
backend/src/services/: AuthService.h  EncryptionService.h  ShareService.h  StorageService.h  UserDeletionService.h
backend/src/utils/: FolderTreeUtils.h  HashUtils.h  JwtUtils.h  ResponseUtils.h  UuidUtils.h  Version.h
desktop/: .gitignore  README.md  package.json  tsconfig.json
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
init/: Dockerfile  generate-secrets.sh
nginx/: Dockerfile  entrypoint.sh  nginx.conf
scripts/: apply-update.sh  bump-version.sh  compose-up.ps1  compose-up.sh  resolve-version.sh
updater/: Dockerfile  server.py  update.sh
(+96 files in other folders)
